UI-3292 Fix bug Mini Chat - Tooltip not visible for issue CHAT-7

--- a/application/src/main/java/org/exoplatform/chat/portlet/notification/assets/base.less
+++ b/application/src/main/java/org/exoplatform/chat/portlet/notification/assets/base.less
@@ -165,17 +165,20 @@
   .border-radius(5px);
   z-index: 1000;
   .box-shadow(0px 2px 6px 0px rgba(35, 44, 48, 0.5));
- border: 1px solid #cccccc;
+  border: 1px solid #cccccc;
 
   .title {
     min-height: 20px;
-	border:none;
-	border: 1px solid #3d3d3d;
+    border:none;
+    border: 1px solid #3d3d3d;
     padding: 10px;
-	margin:-1px -1px 0px -1px;
-	.border-top-left-radius(4px);
-	.border-top-right-radius(4px);
-	#gradient > .vertical (#4f4f4f,#474747);
+    margin:-1px -1px 0px -1px;
+    .border-top-left-radius(4px);
+    .border-top-right-radius(4px);
+    #gradient > .vertical (#4f4f4f,#474747);
+    .tooltip {
+      top: 39px!important;
+    }
     .fullname {
         line-height: 100%;
         font-weight: bold;
